--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
-      <h1>HTML CSS JS Starter Repo</h1>
+      <h1>HTML CSS JS Starter Repo Test Refresh</h1>
     </div>
   </body>
 </html>
