add js to html file

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <div class="container">
       <h1>HTML CSS JS Starter Repo Test Refresh</h1>
     </div>
+
+    <script src="js/index.js"></script>
   </body>
 </html>
